# MikeRust

./: .env.example  .gitignore  .taurignore  Cargo.toml  HISTORY.md  NOTICE.md  PLAN_FONTI_INTERNAZIONALI.md  PLAN_MISSING.md  README.md  run.ps1
config/: corpora.json  model.json
config/column-presets/insurance/: assicuratore.json  condizioni-rinnovo.json  contraente-assicurato.json  data-decorrenza.json  data-scadenza.json  esclusioni-principali.json  foro-competente.json  franchigia-sir.json  legge-applicabile.json  liquidazione-sinistri.json  massimale-aggregato-annuo.json  massimale-per-sinistro.json  premio-annuo.json  recesso-infrannuale.json  subrogazione.json  territorialita.json  tipo-franchigia.json
config/column-presets/legal/: amendment.json  assignment.json  change-of-control.json  confidentiality.json  effective-date.json  force-majeure.json  governing-law.json  indemnity.json  parties.json  payment-fees.json  term.json  termination.json  warranties.json
config/corpora-plugins/: ar-infoleg.json  at-ris.json  au-federalregister.json  be-justel.json  br-planalto.json  ca-justice.json  ch-fedlex.json  cnil.json  coe-hudoc.json  de-gesetze.json  de-openlegaldata.json  es-boe.json  eu-curia.json  eurlex.json  fr-judilibre.json  fr-legifrance.json  ie-irishstatutebook.json  in-indiankanoon.json  it-normattiva.json  italian-legal.json  jp-egov.json  mx-dof.json  nl-rechtspraak.json  nl-wetten.json  uk-findcaselaw.json  uk-legislation.json  us-cfr.json  us-courtlistener.json
config/docx-templates/compliance/: nis2-audit-readiness-report.json
config/docx-templates/it/: attestazione-art-33-ccii.json  diffida-messa-in-mora.json  parcella-professionale.json  relazione-medico-legale.json  relazione-stima-valore.json  ricorso-tributario.json
config/system-prompts/de/: compliance.md  finance.md  gdpr.md  hr.md  insurance.md  ip.md  legal.md  medical.md  others.md  pa.md  real_estate.md
config/system-prompts/en/: compliance.md  finance.md  gdpr.md  hr.md  insurance.md  ip.md  legal.md  medical.md  others.md  pa.md  real_estate.md
config/system-prompts/es/: compliance.md  finance.md  gdpr.md  hr.md  insurance.md  ip.md  legal.md  medical.md  others.md  pa.md  real_estate.md
config/system-prompts/fr/: compliance.md  finance.md  gdpr.md  hr.md  insurance.md  ip.md  legal.md  medical.md  others.md  pa.md  real_estate.md
config/system-prompts/it/: compliance.md  finance.md  gdpr.md  hr.md  insurance.md  ip.md  legal.md  medical.md  others.md  pa.md  real_estate.md
config/system-prompts/pt/: compliance.md  finance.md  gdpr.md  hr.md  insurance.md  ip.md  legal.md  medical.md  others.md  pa.md  real_estate.md
config/workflow-presets/compliance/: macchine-classify-doc.json  nis2-audit-readiness.json  nis2-policy-inventory.json
config/workflow-presets/finance/: commerc-analisi-bancaria.json  commerc-cashflow-previsionale.json  commerc-checklist-dd-documenti.json  commerc-checklist-redditi-pf.json  commerc-confronto-piano-liquidatoria.json  commerc-contestazioni-ufficio.json  commerc-esposizione-fiscale-anno-tributo.json  commerc-indicatori-crisi.json  commerc-indicatori-econ-finanz.json  commerc-inventario-documenti.json  commerc-metodi-valutativi.json  commerc-portafoglio-clienti-stato.json  commerc-quality-check-preinvio.json  commerc-relazione-att-33-ccii.json  commerc-relazione-ctu-tributaria.json  commerc-relazione-stima.json  commerc-report-due-diligence.json  commerc-riclassificazione-bilanci.json  commerc-ricorso-tributario.json  commerc-rideterminazione-reddito.json  commerc-rilievi-controdeduzioni.json  commerc-rischi-dd-semaforo.json  commerc-scadenzario-annuale.json  commerc-scadenze-processuali.json  commerc-stato-passivo.json
config/workflow-presets/fiscale/: analisi-fiscale-bilancio.json  base-imponibile-irap.json  riconciliazione-civilistico-fiscale.json
config/workflow-presets/insurance/: dd-report.json  (+5 more)
docs/: CORPUS_PLUGINS.md  PLAN_MISTRAL.md  UPSTREAM_SYNC.md  WORKFLOWS.md  gliner2-pii-plan.md  macchine.md  mikerust-ui-rewrite-plan.md  nis2-prompts.md  pa-prompts.md  piano_settore_fiscale.md  piano_toolkit_commercialista.md  piano_toolkit_medico_legale.md  whisper-mike-plan.md
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/locales/: de.json  en.json  es.json  fr.json  it.json  pt.json
frontend/messages/: de.json  en.json  es.json  fr.json  it.json  pt.json
frontend/scripts/: fill-i18n.mjs  merge-i18n.mjs
frontend/src/: App.svelte  app.css  main.ts
libs/onnxruntime/: README.md
migrations/: 0020_messages_events.sql  0022_workflow_hidden_drop_workflow_fk.sql  0024_docx_template_hidden.sql  0025_documents_corpus_date.sql  0027_user_enabled_domains.sql  0029_documents_decision.sql  0030_user_hyde_enabled.sql  0031_tabular_reviews_drop_workflow_fk.sql
scripts/: build-release.ps1  dev.ps1  fetch-native-libs.ps1
src/: domain.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.svelte.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/audio/: bootstrap.rs  decode.rs  mod.rs  model.rs  transcribe.rs
src/auth/: rate_limit.rs
src/corpora/: dila_bulk.rs  eurlex.rs  fedlex.rs  italian_legal.rs  limits.rs  manifest_adapter.rs  mod.rs  plugin.rs
src/db/: mod.rs
src/docx/: document_xml.rs  it_helpers.rs  mod.rs  package.rs  placeholders.rs  styles_xml.rs
src/embeddings/: mod.rs  service.rs
src/llm/: builtin_tools.rs  claude.rs  gemini.rs  hyde.rs  local.rs  mistral.rs  mod.rs  summarize.rs  types.rs
src/mikeprj/: io.rs  manifest.rs
src/ner/: bootstrap.rs  engine.rs  labels.rs  mod.rs  regex_masks.rs
src/pdf/: mod.rs
src/presets/: docx_template.rs  mod.rs  model.rs  system_prompt.rs  workflow.rs
src/routes/: auth.rs  chat.rs  corpora.rs  documents.rs  docx_templates.rs  eurlex.rs  health.rs  italian_legal.rs  mod.rs  projects.rs  sync.rs  tabular_reviews.rs  user.rs  workflows.rs
src/storage/: mod.rs
src/sync/: scanner.rs
tests/: embedding_perf.rs  insurance_diffida_e2e.rs  medical_citations_e2e.rs  workflows_smoke.rs
tests/docs insurance/: doc2.txt
(+159 files in other folders)
