[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "mike"
version = "0.1.0"
edition = "2024"
description = "Mike local — sovereign AI document assistant"

# ------------------------------------------------------------------
# Web framework
# ------------------------------------------------------------------
[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# ------------------------------------------------------------------
# Database — SQLite via sqlx (zero setup, single file)
# ------------------------------------------------------------------
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"] }

# ------------------------------------------------------------------
# Auth — PIN (Argon2id) + biometric + opaque session tokens
# ------------------------------------------------------------------
argon2 = "0.5"
# rand_core 0.6 with getrandom — needed to get OsRng compatible with password-hash 0.5
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
# Session tokens are opaque UUIDs stored in SQLite — no JWT needed for local use

# .mikeprj export envelope: AES-256-GCM with key derived from recipient
# email via Argon2id. Sha2 needed to fingerprint the email (we only ship
# the hash, not the email itself).
aes-gcm = "0.10"
sha2 = "0.10"

# ------------------------------------------------------------------
# RAG: embeddings + vector store (sqlite-vec) + folder watcher
# ------------------------------------------------------------------
# fastembed wraps ort (ONNX Runtime) and downloads/caches models from
# HuggingFace on first use. We default to the multilingual-e5-base
# variant (768 dims, 512 max tokens) which works well for IT/EN legal
# text. Optional feature gate so devs without ort/onnxruntime libs can
# still build the rest of MikeRust.
#
# Default fastembed features include `ort-download-binaries-native-tls`
# which pulls the correct onnxruntime build for the active target at
# compile time (via ort-sys) and links it into the binary as a
# bundled artifact.
#
# Tried `ort/load-dynamic` against `libs/onnxruntime/win-arm64/onnxruntime.dll`
# TWICE (commits b565e08 2026-05-14 and the load-dynamic experiment
# after `cd7ba39`). Both reproduce a >5-minute stall inside
# `TextEmbedding::try_new_from_user_defined` on Snapdragon X Elite
# ARM64. The DLL we vendor is byte-identical (SHA256 verified) to
# the binary `ort-sys` uses in the static build — so the regression
# isn't the binary, it's something in ort 2.0.0-rc.12's load-dynamic
# symbol-resolution glue on ARM64. The default static path is the
# only configuration that actually completes session init in <5s.
fastembed = { version = "5", optional = true }
# Direct dep on the same ort version fastembed pulls transitively, so
# we can configure execution providers (DirectML on Windows GPUs, QNN
# on Qualcomm Snapdragon NPUs) without forking fastembed. Cargo
# deduplicates: there's still a single ort 2.0.0-rc.12 in the build,
# our features just merge into fastembed's existing feature set.
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false }
# Vector store via the sqlite-vec extension. Same SQLite file as the
# rest of MikeRust (mike.db) — atomic transactions, single backup,
# no extra daemon, no protoc. Brute-force cosine in C with SIMD;
# fast up to ~500k vectors which is well above any single-firm needs.
sqlite-vec = { version = "0.1", optional = true }
# Needed only to call `sqlite3_auto_extension` so sqlx's pool picks
# up the vec0 extension on every new connection. The version is kept
# in sync with sqlx's own libsqlite3-sys via cargo's dedup.
libsqlite3-sys = { version = "0.30", optional = true, features = ["bundled"] }
# Pack/unpack f32 vectors as little-endian bytes for the embedding BLOB.
zerocopy = { version = "0.7", optional = true, features = ["derive"] }
# Folder scan: depth-first traversal of the user-configured directory
# tree, with `.gitignore`/`.mikesyncignore` honored.
walkdir = { version = "2", optional = true }
ignore  = { version = "0.4", optional = true }

# ------------------------------------------------------------------
# Storage — local filesystem + optional S3/R2 fallback
# ------------------------------------------------------------------
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

# ------------------------------------------------------------------
# PDF extraction — pdfium-render (bundled dll in libs/pdfium/)
# Pass 1: native text extraction; Pass 2: image render for OCR fallback
# ------------------------------------------------------------------
pdfium-render = { version = "0.8", features = ["thread_safe", "image"], optional = true }
# image used for: PDF page rendering (under "pdf" feature) AND TIFF→JPEG conversion (always).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Multi-page TIFF reading — image alone gives only the first frame.
tiff = "0.9"

# ------------------------------------------------------------------
# DOCX parsing — pure Rust ZIP+XML (no external process)
# ------------------------------------------------------------------
zip = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
pulldown-cmark = { version = "0.12", default-features = false }
# HTML scraping for the EUR-Lex adapter — strips the rendered legal-
# content page down to the article body so we can chunk + embed it.
# pure-Rust, ~1MB of compile-time cost; no native deps.
scraper = "0.20"
# Parquet reader for the italian-legal-corpus HuggingFace bulk import.
# We download the dataset's published shards, project only the
# metadata columns we need (no `text` body — that stays remote and is
# fetched on demand), and stream them into our local SQLite FTS5
# index. Used by `src/corpora/italian_legal.rs`.
parquet = { version = "53", default-features = false, features = ["arrow", "snap", "zstd"] }
arrow-array = "53"
arrow-schema = "53"

# ------------------------------------------------------------------
# RTF — pure-Rust text extraction via rtf-parser (26k recent
# downloads, no native deps). Used by the sync scanner + the
# read_document builtin tool. We only need the plain text after
# stripping control words, fonts, pictures, and field codes.
# ------------------------------------------------------------------
rtf-parser = "0.4"

# ------------------------------------------------------------------
# XLSX parsing — calamine (pure Rust, supports xlsx, xls, xlsb, ods)
# ------------------------------------------------------------------
calamine = "0.26"

# ------------------------------------------------------------------
# HTTP client — LLM API calls + MCP client + SSE streaming
# ------------------------------------------------------------------
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
percent-encoding = "2"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1"

# ------------------------------------------------------------------
# Bulk-archive decoding — DILA OPENDATA + future BOE/GU/Gesetze
# All these portals publish their legal corpora as tar.gz dumps;
# tar + flate2 lets us stream-walk an archive without holding it
# all in RAM.
# ------------------------------------------------------------------
flate2 = "1"
tar = "0.4"

# ------------------------------------------------------------------
# MCP client — protocol wire types (no official Rust SDK yet)
# ------------------------------------------------------------------
# Uses reqwest + serde_json for Streamable HTTP and SSE transports

# ------------------------------------------------------------------
# Serialization / misc
# ------------------------------------------------------------------
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.9"
async-trait = "0.1"

# ------------------------------------------------------------------
# Optional features
# ------------------------------------------------------------------
[features]
default = ["local-storage", "rag"]
local-storage = []
s3-storage = ["dep:aws-sdk-s3", "dep:aws-config"]
pdf = ["dep:pdfium-render"]
# Embeddings + vector DB + folder scanner. Pulled in by default so the
# UI's "Sincronizza cartella" panel is functional out of the box, but
# can be disabled (`--no-default-features`) for slim CI builds since
# fastembed transitively depends on `ort` + native onnxruntime libs.
rag = [
    "dep:fastembed",
    "dep:ort",
    "dep:sqlite-vec",
    "dep:libsqlite3-sys",
    "dep:zerocopy",
    "dep:walkdir",
    "dep:ignore",
]
# Hardware-accelerated embedding inference via ONNX Runtime execution
# providers (EPs). All are strictly opt-in — the default `rag` build
# uses CPU only, which is portable but slower on batch indexing.
#
# Every EP feature is compatible with `load-dynamic` (ort doesn't try
# to compile against the vendor SDK; the runtime onnxruntime.dll in
# `libs/onnxruntime/<platform>/` provides the actual EP implementation).
# A provider whose backend DLL isn't loadable at runtime is silently
# skipped by ort — so it's safe to ship a binary with every EP enabled
# even on a machine that only has DirectML available.
#
# Build size and link-time cost are negligible because `load-dynamic`
# bypasses ort-sys' build script: enabling every EP roughly doubles
# the size of the Rust glue, not the binary.
#
# Quick reference (which EP for what):
#   directml   Windows GPU (Adreno, Iris, Radeon, GeForce — any DX12)
#   cuda       NVIDIA GPUs (Pascal+, requires CUDA-built onnxruntime.dll)
#   tensorrt   NVIDIA, INT8/FP16 graph optimisation on top of cuda
#   openvino   Intel CPU/iGPU/Movidius VPU
#   onednn     Intel oneDNN (CPU-side optimised kernels)
#   coreml     Apple Silicon ANE / GPU on macOS
#   rocm       AMD ROCm (Linux + Windows discrete cards)
#   migraphx   AMD MIGraphX (graph optimiser on top of rocm)
#   qnn        Qualcomm Hexagon NPU (Snapdragon X Elite, 8 Gen 3, …)
#   cann       Huawei Ascend NPU
#   acl        ARM Compute Library
#   armnn      Arm NN
#   vitis      AMD/Xilinx Vitis AI FPGA
#   azure      Azure Cognitive Services attached EPs
#   nnapi      Android Neural Networks API
#   rknpu      Rockchip RK3588 / RK3568 NPU
#   tvm        Apache TVM
#   webgpu     WGPU/Dawn (cross-platform via WebGPU)
#   xnnpack    Google XNNPACK (mobile CPU optimisation)
#
# Convenience umbrellas at the bottom — pick a platform pack or
# `rag-accel-all` to enable every EP at once.
rag-acl       = ["dep:ort", "ort/acl"]
rag-azure     = ["dep:ort", "ort/azure"]
rag-cann      = ["dep:ort", "ort/cann"]
rag-coreml    = ["dep:ort", "ort/coreml"]
rag-cuda      = ["dep:ort", "ort/cuda"]
rag-directml  = ["dep:ort", "ort/directml"]
rag-migraphx  = ["dep:ort", "ort/migraphx"]
rag-nnapi     = ["dep:ort", "ort/nnapi"]
rag-onednn    = ["dep:ort", "ort/onednn"]
rag-openvino  = ["dep:ort", "ort/openvino"]
# ⚠ Do NOT enable `rag-qnn` with the default embedding model
# (multilingual-e5-base). The model is float32 / non-QDQ-quantized and
# the QNN HTP backend requires INT8 QDQ; session-init silently hangs
# instead of gracefully falling back to CPU. Re-enable this feature
# ONLY after pairing it with a properly QDQ-quantized variant of the
# embedding model (or another QNN-compatible model). Tested empirically
# on Snapdragon X Elite, May 2026.
rag-qnn       = ["dep:ort", "ort/qnn"]
rag-rknpu     = ["dep:ort", "ort/rknpu"]
rag-rocm      = ["dep:ort", "ort/rocm"]
rag-tensorrt  = ["dep:ort", "ort/tensorrt"]
rag-tvm       = ["dep:ort", "ort/tvm"]
rag-vitis     = ["dep:ort", "ort/vitis"]
rag-webgpu    = ["dep:ort", "ort/webgpu"]
rag-xnnpack   = ["dep:ort", "ort/xnnpack"]

# Platform packs — every EP that's actually useful on that OS family.
# These are unions, not exclusive: enabling `rag-accel-windows` does
# not preclude also enabling `rag-coreml` for a Mac cross-build.
rag-accel-windows = [
    "rag-directml",
    "rag-cuda",
    "rag-tensorrt",
    "rag-openvino",
    "rag-onednn",
    "rag-qnn",
    "rag-xnnpack",
    "rag-webgpu",
]
rag-accel-linux = [
    "rag-cuda",
    "rag-tensorrt",
    "rag-openvino",
    "rag-onednn",
    "rag-rocm",
    "rag-migraphx",
    "rag-xnnpack",
    "rag-webgpu",
]
rag-accel-macos = [
    "rag-coreml",
    "rag-xnnpack",
    "rag-webgpu",
]

# Everything ort 2.0.0-rc.12 supports. Build size impact: ~negligible
# with `load-dynamic` (no vendor SDKs linked). Runtime: every EP that
# fails to find its backend DLL is skipped, so this never crashes.
rag-accel-all = [
    "rag-acl",
    "rag-azure",
    "rag-cann",
    "rag-coreml",
    "rag-cuda",
    "rag-directml",
    "rag-migraphx",
    "rag-nnapi",
    "rag-onednn",
    "rag-openvino",
    "rag-qnn",
    "rag-rknpu",
    "rag-rocm",
    "rag-tensorrt",
    "rag-tvm",
    "rag-vitis",
    "rag-webgpu",
    "rag-xnnpack",
]

# ------------------------------------------------------------------
# pdfium DLL path — bundled alongside the binary
# ------------------------------------------------------------------
[package.metadata.pdfium]
# Place pdfium.dll (Windows) / libpdfium.so (Linux) / libpdfium.dylib (macOS)
# in libs/pdfium/ — the binary looks there at runtime via PDFIUM_DYNAMIC_LIB_PATH
bindings = "libs/pdfium"

# ------------------------------------------------------------------
# Biometric auth — platform-specific
# ------------------------------------------------------------------
[target.'cfg(target_os = "windows")'.dependencies]
# Windows Hello: KeyCredentialManager + UserConsentVerifier;
# Win32_System_Threading: SetThreadPriority for the embedding work
# so a long indexing run can't peg the laptop into unresponsiveness.
windows = { version = "0.61", features = [
    "Win32_System_Threading",
    "Security_Credentials",
    "Security_Credentials_UI",
    "Foundation",
] }

# [target.'cfg(target_os = "macos")'.dependencies]
# TODO: macOS Touch ID via LocalAuthentication framework
# objc2-local-authentication = "0.3"

[profile.dev]
# Workaround for MSVC LNK1140 ("limite superato per il database di programma")
# on Windows ARM64. Full debug info (= 2) blows past the .pdb symbol cap with
# the rag/ort/sqlite-vec dependency tree. `line-tables-only` keeps file/line
# numbers in stack traces (which is what we actually need for dev) without
# emitting variable + type debug records.
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# ------------------------------------------------------------------
# Test-only dependencies — kept out of the production binary.
# ------------------------------------------------------------------
[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
