[package]
name = "mike-tauri"
version = "0.5.4"
edition = "2024"

[lib]
name = "mike_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mike-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
# `rag` rides in via the `mike` crate's default features
# (`default = ["local-storage", "rag"]`).
#
# ⚠ Do NOT add "rag-qnn" here with the default embedding model.
# Tried on Snapdragon X Elite (May 2026): the QNN HTP backend is
# registered but ort session-init silently hangs forever because
# multilingual-e5-base is float32 / non-QDQ. HTP requires INT8 QDQ
# quantization and does not gracefully fall back to CPU when the
# model layout is incompatible. The whole embedding subsystem dies
# and Gemini never gets called.
#
# Re-enable rag-qnn ONLY together with a QDQ-quantized variant of
# the embedding model (or another HTP-compatible model). CPU is the
# working baseline; on ARM64 Snapdragon X Elite per-query embed is
# 50-100 ms which is invisible to the user. The performance lap
# back to QNN is tracked in Phase 1.A.4 (lap B).
mike = { path = "..", features = ["pdf", "ner-pii", "rag-directml"] }
windows-future = "0.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Persistent file logger for the windowed release build. Because
# `windows_subsystem = "windows"` detaches stdout / stderr in MSI
# installs, every `tracing::info!` / `tracing::error!` emitted during
# backend startup (load_attached_docs, AppState::new, run_migrations,
# ort::init…) used to vanish into the void — a failure before
# `axum::serve` left the user with a generic "Failed to fetch" screen
# and no way to diagnose it. tracing-appender now writes the same
# event stream to `<home>/mikerust-data/mike-tauri.log` so a crashing
# install can be triaged from the log file directly.
tracing-appender = "0.2"
anyhow = "1"
dotenvy = "0.15"
# Cross-platform launcher for the system default browser. Used by
# the `open_external_url` Tauri command so links from the in-app
# WebView land in Edge/Chrome/Safari instead of being intercepted
# by the WebView itself (which makes the in-app shell behave like a
# mini-browser, not what the user wants for "Apri su EUR-Lex").
open = "5"
# Native folder/file picker. Used by the `pick_folder` Tauri command
# so the sync-folder field in Settings can be filled from an OS dialog.
rfd = "0.15"
# Picks a random ephemeral port for the embedded axum server on startup
# instead of letting the OS hand back port 0. With multiple Tauri /
# Electron desktop apps that all use axum on localhost, port 0's
# ephemeral pool can land on a port another app is about to bind — the
# explicit random-in-49152..=65535 pick + pre-bind check below keeps
# the choice independent and easier to reason about.
rand = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Security_Credentials",
    "Security_Credentials_UI",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_WinRT",
] }
